manifests/ingress/ingress-nginx-example/deployment-example/rc-fortune.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-svc
spec:
  selector:
    app: fortune
  ports:
  - port: 80
    targetPort: 80
