manifests/ingress/ingress-nginx-example/deployment-example/ingress-fortune.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fortune
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fortune.test.com
    http:
      paths:
        - path: /
          backend:
            serviceName: fortune-svc
            servicePort: 80
